Fixed centering of menu on mobile

--- a/data/themes/default/www/css/style.css
+++ b/data/themes/default/www/css/style.css
@@ -10,6 +10,7 @@
 .navbar-nav li {
     width: 33.3333333%;
     text-align: center;
+    margin: 0 auto;
 }
 
 .glyph-centered {
